--- a/readme.org
+++ b/readme.org
@@ -6,7 +6,7 @@
 
   Partly I just want to open new doors.
 
-  Plus if it takes off, maybe it can be snuck into other projects by repurposing
+  Plus if it takes off, maybe it can be snuck into other projects by spoofing
   the "js" file extension...
 * Justification
   People always ask "why write a new language? What's different about it?".
@@ -49,9 +49,9 @@
   For a primer on the language (in progress) See docs/langauge.org.
 
   For a bit of justification, in spite of the above diatribe, see
-  docs/research-aesthetics.org. That doc is a mosaic of years of my own notes.
-  It's sprawling, sometimes repetitive, and often (though I've tried to clarify)
-  obscure. Enjoy if you can, otherwise ignore it
+  docs/aesthetics.org. That doc is a mosaic of years of my own notes. It's
+  sprawling, sometimes repetitive, and often (though I've tried to clarify)
+  obscure. Enjoy it if you can, otherwise ignore it.
 * Copyright
   © Thomas Getgood 2024
 
